fix: deparaffinization protocol with devcontainer

--- a/protocols/histology/deparaffinization.ipynb
+++ b/protocols/histology/deparaffinization.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = ConfigParser()\n",
     "\n",
-    "_ = parser.read('token.secrets')\n",
+    "_ = parser.read('../token.secrets')\n",
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "protocol_csv_path = './histology/Deparaffinization.csv' #'./histology/FFPE.csv' \n",
+    "protocol_csv_path = './Deparaffinization.csv' #'./histology/FFPE.csv' \n",
     "\n",
     "\n",
     "# Show the HTML Description file loaded\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -376,84 +376,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>ddH2O</td>\n",
+       "      <td>0:05:00</td>\n",
+       "      <td>Room Temperature</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Step 10: ddH2O (0:05:00) &lt;br&gt;Description: Room...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>9</td>\n",
        "      <td>50% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 9: 50% Ethanol (0:05:00)</td>\n",
+       "      <td>Step 9: 50% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>8</td>\n",
        "      <td>75% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 8: 75% Ethanol (0:05:00)</td>\n",
+       "      <td>Step 8: 75% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>7</td>\n",
        "      <td>95% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 7: 95% Ethanol (0:05:00)</td>\n",
+       "      <td>Step 7: 95% Ethanol (0:05:00) &lt;br&gt;Description:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>6</td>\n",
        "      <td>100% Ethanol - 2</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 6: 100% Ethanol - 2 (0:05:00)</td>\n",
+       "      <td>Step 6: 100% Ethanol - 2 (0:05:00) &lt;br&gt;Descrip...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>100% Ethanol - 1</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 5: 100% Ethanol - 1 (0:05:00)</td>\n",
+       "      <td>Step 5: 100% Ethanol - 1 (0:05:00) &lt;br&gt;Descrip...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>4</td>\n",
        "      <td>50% Xylene / 50% Ethanol</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 4: 50% Xylene / 50% Ethanol (0:05:00)</td>\n",
+       "      <td>Step 4: 50% Xylene / 50% Ethanol (0:05:00) &lt;br...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>3</td>\n",
        "      <td>Xylene - 2</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 3: Xylene - 2 (0:05:00)</td>\n",
+       "      <td>Step 3: Xylene - 2 (0:05:00) &lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>2</td>\n",
        "      <td>Xylene - 1</td>\n",
        "      <td>0:05:00</td>\n",
        "      <td>Room Temperature</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 2: Xylene - 1 (0:05:00)</td>\n",
+       "      <td>Step 2: Xylene - 1 (0:05:00) &lt;br&gt;Description: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>1</td>\n",
        "      <td>Melt paraffin in oven</td>\n",
        "      <td>1:00:00</td>\n",
        "      <td>60C</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
-       "      <td>Step 1: Melt paraffin in oven (1:00:00)</td>\n",
+       "      <td>Step 1: Melt paraffin in oven (1:00:00) &lt;br&gt;De...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -461,26 +470,28 @@
       ],
       "text/plain": [
        "   Step Number                 Step Text Duration       Description Comment  \\\n",
-       "0            9               50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "1            8               75% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "2            7               95% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "3            6          100% Ethanol - 2  0:05:00  Room Temperature    <NA>   \n",
-       "4            5          100% Ethanol - 1  0:05:00  Room Temperature    <NA>   \n",
-       "5            4  50% Xylene / 50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
-       "6            3                Xylene - 2  0:05:00  Room Temperature    <NA>   \n",
-       "7            2                Xylene - 1  0:05:00  Room Temperature    <NA>   \n",
-       "8            1     Melt paraffin in oven  1:00:00               60C    <NA>   \n",
+       "0           10                     ddH2O  0:05:00  Room Temperature    <NA>   \n",
+       "1            9               50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "2            8               75% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "3            7               95% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "4            6          100% Ethanol - 2  0:05:00  Room Temperature    <NA>   \n",
+       "5            5          100% Ethanol - 1  0:05:00  Room Temperature    <NA>   \n",
+       "6            4  50% Xylene / 50% Ethanol  0:05:00  Room Temperature    <NA>   \n",
+       "7            3                Xylene - 2  0:05:00  Room Temperature    <NA>   \n",
+       "8            2                Xylene - 1  0:05:00  Room Temperature    <NA>   \n",
+       "9            1     Melt paraffin in oven  1:00:00               60C    <NA>   \n",
        "\n",
-       "                                     Combined  \n",
-       "0               Step 9: 50% Ethanol (0:05:00)  \n",
-       "1               Step 8: 75% Ethanol (0:05:00)  \n",
-       "2               Step 7: 95% Ethanol (0:05:00)  \n",
-       "3          Step 6: 100% Ethanol - 2 (0:05:00)  \n",
-       "4          Step 5: 100% Ethanol - 1 (0:05:00)  \n",
-       "5  Step 4: 50% Xylene / 50% Ethanol (0:05:00)  \n",
-       "6                Step 3: Xylene - 2 (0:05:00)  \n",
-       "7                Step 2: Xylene - 1 (0:05:00)  \n",
-       "8     Step 1: Melt paraffin in oven (1:00:00)  "
+       "                                            Combined  \n",
+       "0  Step 10: ddH2O (0:05:00) <br>Description: Room...  \n",
+       "1  Step 9: 50% Ethanol (0:05:00) <br>Description:...  \n",
+       "2  Step 8: 75% Ethanol (0:05:00) <br>Description:...  \n",
+       "3  Step 7: 95% Ethanol (0:05:00) <br>Description:...  \n",
+       "4  Step 6: 100% Ethanol - 2 (0:05:00) <br>Descrip...  \n",
+       "5  Step 5: 100% Ethanol - 1 (0:05:00) <br>Descrip...  \n",
+       "6  Step 4: 50% Xylene / 50% Ethanol (0:05:00) <br...  \n",
+       "7  Step 3: Xylene - 2 (0:05:00) <br>Description: ...  \n",
+       "8  Step 2: Xylene - 1 (0:05:00) <br>Description: ...  \n",
+       "9  Step 1: Melt paraffin in oven (1:00:00) <br>De...  "
       ]
      },
      "metadata": {},
@@ -494,7 +505,7 @@
     "df = df.iloc[::-1].reset_index()\n",
     "df.drop(columns='index', inplace=True)\n",
     "\n",
-    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \")\"\n",
+    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'].astype(str) + \" <br>Comment: \" + df['Comment'].astype(str)\n",
     "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
@@ -503,13 +514,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Total time to complete the protocol: 1h:40m:0s.<br>Expected time of completion: Saturday at 09:19 PM"
+       "Total time to complete the protocol: 1h:45m:0s.<br>Expected time of completion: Sunday at 06:38 PM"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -554,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -572,24 +583,24 @@
     }
    ],
    "source": [
-    "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
+    "# create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
-    "create_new_cell('send_matrix_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ---- <br><hr>\")')\n",
+    "# create_new_cell('send_matrix_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ---- <br><hr>\")')\n",
     "\n",
-    "for row in df.index:\n",
-    "    all_in_one = step_commands(df, row)\n",
+    "# for row in df.index:\n",
+    "#     all_in_one = step_commands(df, row)\n",
     "    \n",
-    "    create_new_cell(all_in_one)\n",
+    "#     create_new_cell(all_in_one)\n",
     "\n",
-    "display(Markdown('## Start the protocol\\n**When you are ready to begin, run the cell below**'))\n",
+    "# display(Markdown('## Start the protocol\\n**When you are ready to begin, run the cell below**'))\n",
     "\n",
-    "create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")')\n",
+    "# create_new_cell('send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")')\n",
     "\n",
-    "create_new_cell('send_matrix_message(f\"{html_description}\")')\n",
+    "# create_new_cell('send_matrix_message(f\"{html_description}\")')\n",
     "\n",
-    "create_new_cell('send_matrix_message(clear_chat_page)')\n",
+    "# create_new_cell('send_matrix_message(clear_chat_page)')\n",
     "\n",
-    "create_new_cell(\"#------ Click here, then run all of the cells below ------#\")"
+    "# create_new_cell(\"#------ Click here, then run all of the cells below ------#\")"
    ]
   },
   {
@@ -603,51 +614,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix notification successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "send_matrix_message(clear_chat_page)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix notification successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "send_matrix_message(f\"{html_description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix notification successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "send_matrix_message(f\"---- STARTING PROTOCOL at {current_datetime()} ---- <br>Total time to complete the protocol: {total_time_formatted}.<br>Expected time of completion: {formatted_completion_time}\")"
    ]
@@ -658,8 +645,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 1: Melt paraffin in oven (1:00:00)**') \n",
+    "print('**Step 1: Melt paraffin in oven (1:00:00) <br>Description: 60C <br>Comment: nan**') \n",
     "print('Duration is 60.0 minutes') \n",
+    "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 2: Xylene - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
+    "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
    ]
   },
@@ -669,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 2: Xylene - 1 (0:05:00)**') \n",
+    "print('**Step 3: Xylene - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
    ]
@@ -680,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 3: Xylene - 2 (0:05:00)**') \n",
+    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
    ]
@@ -691,7 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00)**') \n",
+    "print('**Step 5: 100% Ethanol - 1 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
    ]
@@ -702,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:05:00)**') \n",
+    "print('**Step 6: 100% Ethanol - 2 (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
    ]
@@ -713,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:05:00)**') \n",
+    "print('**Step 7: 95% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
    ]
@@ -724,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 7: 95% Ethanol (0:05:00)**') \n",
+    "print('**Step 8: 75% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
    ]
@@ -735,7 +733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 8: 75% Ethanol (0:05:00)**') \n",
+    "print('**Step 9: 50% Ethanol (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
    ]
@@ -746,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 9: 50% Ethanol (0:05:00)**') \n",
+    "print('**Step 10: ddH2O (0:05:00) <br>Description: Room Temperature <br>Comment: nan**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
    ]
