--- a/protocols/protocol-timer.ipynb
+++ b/protocols/protocol-timer.ipynb
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protocol_csv_path = './protocols/histology/Deparaffinization.csv' #'./histology/FFPE.csv' \n",
+    "protocol_csv_path = './protocols/histology/10x_Genomics/10xG_Deparaffinization.csv' #'./histology/FFPE.csv' \n",
     "\n",
     "\n",
     "# Show the HTML Description file loaded\n",
@@ -384,7 +384,7 @@
     "df = df.iloc[::-1].reset_index()\n",
     "df.drop(columns='index', inplace=True)\n",
     "\n",
-    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'] + \" <br>Comment: \" + df['Comment']\n",
+    "df['Combined'] = \"Step \"+ df['Step Number'].astype(str) + \": \" + df['Step Text'].astype(str) + \" (\" + df['Duration'].astype(str) + \") <br>Description: \" + df['Description'].astype(str) + \" <br>Comment: \" + df['Comment'].astype(str)\n",
     "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Description': 'string', 'Comment': 'string', 'Combined':'string'})\n",
     "\n",
@@ -497,63 +497,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 0: Protocol created by Michael Kluppel (0:00:00)**') \n",
+    "print('**Step 0: Protocol created by 10x Genomics (0:00:00) <br>Description: Deparaffinization <br>Comment:  (CG000520 Rev B)**') \n",
     "print('Duration is 0.0 minutes') \n",
-    "countdown(df.Duration.iloc[16], df.Combined.iloc[16], df.Duration.iloc[16])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 1: Melt paraffin in oven (1:00:00)**') \n",
-    "print('Duration is 60.0 minutes') \n",
-    "countdown(df.Duration.iloc[15], df.Combined.iloc[15], df.Duration.iloc[15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 2: Xylene (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[14], df.Combined.iloc[14], df.Duration.iloc[14])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 3: Xylene (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[13], df.Combined.iloc[13], df.Duration.iloc[13])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
-    "countdown(df.Duration.iloc[12], df.Combined.iloc[12], df.Duration.iloc[12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[11], df.Combined.iloc[11], df.Duration.iloc[11])"
    ]
   },
@@ -563,8 +508,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 120.0 minutes') \n",
     "countdown(df.Duration.iloc[10], df.Combined.iloc[10], df.Duration.iloc[10])"
    ]
   },
@@ -574,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 7: 95% Ethanol (0:05:00)**') \n",
+    "print('**<NA>**') \n",
     "print('Duration is 5.0 minutes') \n",
     "countdown(df.Duration.iloc[9], df.Combined.iloc[9], df.Duration.iloc[9])"
    ]
@@ -585,8 +530,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 8: 75% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 10.0 minutes') \n",
     "countdown(df.Duration.iloc[8], df.Combined.iloc[8], df.Duration.iloc[8])"
    ]
   },
@@ -596,8 +541,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 2: Xylene - 1 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 10.0 minutes') \n",
     "countdown(df.Duration.iloc[7], df.Combined.iloc[7], df.Duration.iloc[7])"
    ]
   },
@@ -607,8 +552,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 3: Xylene - 2 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 3.0 minutes') \n",
     "countdown(df.Duration.iloc[6], df.Combined.iloc[6], df.Duration.iloc[6])"
    ]
   },
@@ -618,8 +563,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 4: 50% Xylene / 50% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 3.0 minutes') \n",
     "countdown(df.Duration.iloc[5], df.Combined.iloc[5], df.Duration.iloc[5])"
    ]
   },
@@ -629,8 +574,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 5: 100% Ethanol - 1 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 3.0 minutes') \n",
     "countdown(df.Duration.iloc[4], df.Combined.iloc[4], df.Duration.iloc[4])"
    ]
   },
@@ -640,8 +585,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 6: 100% Ethanol - 2 (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 3.0 minutes') \n",
     "countdown(df.Duration.iloc[3], df.Combined.iloc[3], df.Duration.iloc[3])"
    ]
   },
@@ -651,8 +596,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 7: 95% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 3.0 minutes') \n",
     "countdown(df.Duration.iloc[2], df.Combined.iloc[2], df.Duration.iloc[2])"
    ]
   },
@@ -662,8 +607,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 8: 75% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 0.333 minutes') \n",
     "countdown(df.Duration.iloc[1], df.Combined.iloc[1], df.Duration.iloc[1])"
    ]
   },
@@ -673,8 +618,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('**Step 9: 50% Ethanol (0:05:00)**') \n",
-    "print('Duration is 5.0 minutes') \n",
+    "print('**<NA>**') \n",
+    "print('Duration is 0.0 minutes') \n",
     "countdown(df.Duration.iloc[0], df.Combined.iloc[0], df.Duration.iloc[0])"
    ]
   },
